fix layout; remove flex-wrap property from body for improved layout control

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ body
 {
     width:100%;
     margin:auto;
-    flex-wrap: wrap;
+    
 }
 .my-image
 {
